--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           # Di chuyển tệp đến SharePoint
           curl -X PUT -T example.xlsx "$SHAREPOINT_URL/$SHAREPOINT_FOLDER/example.xlsx"
 
-      - id: Log SHAREPOINT_URL--------------------
-        run: echo "SHAREPOINT_URL: $SHAREPOINT_URL"
-        run: echo "SHAREPOINT_FOLDER: $SHAREPOINT_FOLDER"
-        run: echo "SHAREPOINT_URL_FULL: $SHAREPOINT_URL/$SHAREPOINT_FOLDER/example.xlsx"
+      - name: Log SHAREPOINT_URL--------------------
+        run: |
+          # Xem URL
+          echo "SHAREPOINT_URL_FULL: $SHAREPOINT_URL/$SHAREPOINT_FOLDER/example.xlsx"
