--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,7 @@ jobs:
         run: |
           # Di chuyển tệp đến SharePoint
           curl -X PUT -T example.xlsx "$SHAREPOINT_URL/$SHAREPOINT_FOLDER/example.xlsx"
+      - name: Log SHAREPOINT_URL--------------------
+        run: |
+          # Xem URL
+          echo "SHAREPOINT_URL_FULL: $SHAREPOINT_URL/$SHAREPOINT_FOLDER/example.xlsx"
