--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Create Excel file
         run: |
           # Thực hiện tạo tệp Excel ở đây
-          touch example.xlsx
+          touch example1.xlsx
 
       - name: Move file to SharePoint in Microsoft Teams2
         uses: KoenZomers/SharePoint-UploadFile@master
@@ -24,4 +24,4 @@ jobs:
           siteUrl: 'https://cmcglobalcompany.sharepoint.com/sites/Test_GitHubActions'
           documentLibrary: 'Shared%20Documents/Test_Upload_File/Evd'
           sourceFolder: './'
-          fileToUpload: 'example.xlsx'
+          fileToUpload: 'example1.xlsx'
