--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: example-file-upload
-on: workflow_dispatch
+on:
+  pull_request:
+    types:
+      - opened
 jobs:
   get_report:
     runs-on: ubuntu-latest
