--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Generate Test File
-        id: generate-file
-        run: |
-          echo "Hello, World!" > ${{ github.workspace }}/hellotest.txt
+      - name: Create Test File
+        run: touch ${{ github.workspace }}/foo.txt
 
       - name: Upload File to SharePoint
         env:
@@ -24,10 +22,10 @@ jobs:
           CLIENT_ID: ${{ secrets.SHAREPOINT_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.SHAREPOINT_CLIENT_SECRET }}
         run: |
-            $filePath = "${{ github.workspace }}/hellotest.txt"
-            $hostName = "cmcglobalcompany.sharepoint.com"
-            $siteName = "Test_GitHubActions"
-            $uploadPath = "Test_Upload_File/Evd"
+          $filePath = "${{ github.workspace }}/foo.txt"
+          $hostName = "cmcglobalcompany.sharepoint.com"
+          $siteName = "Test_GitHubActions"
+          $uploadPath = "Test_Upload_File/Evd"
           
           # Install SharePoint Online Management Shell
           Invoke-WebRequest -Uri https://download.microsoft.com/download/0/1/D/01D06854-CA0C-46F1-ADBA-EBF86010DCC6/sharepointclientcomponents_16.1.2102.1200_x64_en-us.msi -OutFile sharepointclientcomponents.msi
