--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,27 +14,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Upload File to SharePoint
+        shell: pwsh
         env:
           TENANT_ID: ${{ secrets.SHAREPOINT_TENANT_ID }}
           CLIENT_ID: ${{ secrets.SHAREPOINT_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.SHAREPOINT_CLIENT_SECRET }}
         run: |
-            $filePath = "C:\Users\nxy\ProjectSource\GitHub_Actions_Demo"
-            $hostName = "cmcglobalcompany.sharepoint.com"
-            $siteName = "Test_GitHubActions"
-            $uploadPath = "Test_Upload_File/Evd"
-          
-          # Install SharePoint Online Management Shell
-          Invoke-WebRequest -Uri https://download.microsoft.com/download/0/1/D/01D06854-CA0C-46F1-ADBA-EBF86010DCC6/sharepointclientcomponents_16.1.2102.1200_x64_en-us.msi -OutFile sharepointclientcomponents.msi
-          Start-Process msiexec.exe -ArgumentList '/i', 'sharepointclientcomponents.msi', '/qn' -NoNewWindow -Wait
-
-          # Authenticate with SharePoint
-          $secpasswd = ConvertTo-SecureString $env:CLIENT_SECRET -AsPlainText -Force
-          $creds = New-Object System.Management.Automation.PSCredential ($env:CLIENT_ID, $secpasswd)
-          Connect-PnPOnline -Url "https://$hostName/sites/$siteName" -Credentials $creds
-
-          # Upload the file
-          Add-PnPFile -Path $filePath -Folder $uploadPath -NewFileName (Split-Path -Path $filePath -Leaf)
-
-          # Disconnect from SharePoint
-          Disconnect-PnPOnline
+          which powershell
+          powershell -File ./.github/scripts/execute-data-patch.ps1
