--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,5 @@ jobs:
           CLIENT_ID: ${{ secrets.SHAREPOINT_CLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.SHAREPOINT_CLIENT_SECRET }}
         run: |
+          Install-Module -Name Microsoft.Graph.GraphRequests.Authentication
           pwsh -File ./.github/scripts/execute-data-patch.ps1
