--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      name: Create file
+      - name: Create file
         run: |
           echo "This is a sample file." > $GITHUB_WORKSPACE/aaaa.txt
 
